--- a/STANDBY/Standby-Mode/Standby-Mode.ioc
+++ b/STANDBY/Standby-Mode/Standby-Mode.ioc
@@ -4,22 +4,27 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+IWDG.IPParameters=Prescaler,Reload
+IWDG.Prescaler=IWDG_PRESCALER_256
+IWDG.Reload=500
 KeepUserPlacement=false
 Mcu.CPN=STM32G0B1RET6
 Mcu.Family=STM32G0
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=RTC
-Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP0=IWDG
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=RTC
+Mcu.IP4=SYS
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32G0B1R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=VP_RTC_VS_RTC_Calendar
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_SYS_VS_DBSignals
+Mcu.Pin10=VP_RTC_VS_RTC_Activate
+Mcu.Pin11=VP_RTC_VS_RTC_Calendar
+Mcu.Pin12=VP_SYS_VS_Systick
+Mcu.Pin13=VP_SYS_VS_DBSignals
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
 Mcu.Pin3=PF0-OSC_IN (PF0)
 Mcu.Pin4=PA2
@@ -27,8 +32,8 @@ Mcu.Pin5=PA3
 Mcu.Pin6=PA5
 Mcu.Pin7=PA13
 Mcu.Pin8=PA14-BOOT0
-Mcu.Pin9=VP_RTC_VS_RTC_Activate
-Mcu.PinsNb=13
+Mcu.Pin9=VP_IWDG_VS_IWDG
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G0B1RETx
@@ -111,7 +116,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APBFreq_Value=16000000
 RCC.APBTimFreq_Value=16000000
@@ -160,6 +165,8 @@ RTC.WeekDay=RTC_WEEKDAY_WEDNESDAY
 RTC.Year=26
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
+VP_IWDG_VS_IWDG.Mode=IWDG_Activate
+VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
